# vpp-flowtable-plugin

./: .gitignore  Makefile  README.md
flowtable-plugin/: Makefile.am  configure.ac  vpp-flowtable-plugin.spec
flowtable-plugin/flowtable/: api.c  flowtable.c  flowtable.h  flowtable_node.c  flowtable_tcp.h  nodes_registration.c
portmirroring-plugin/: INSTALL  Makefile.am  configure.ac
portmirroring-plugin/portmirroring/: api.c  portmirroring.c  portmirroring.h
test/: flowtable-conf-portmirroring.py  flowtable-conf-simple.py  flowtable-env-setup-portmirroring.sh  flowtable-env-setup-simple.sh
